<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            tools:ignore="PrivateResource"
            tools:src="@drawable/poster" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_card">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/card_background"
                        app:cardUseCompatPadding="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#E6E0CA"
                            android:padding="@dimen/padding_cl">

                            <TextView
                                android:id="@+id/releaseDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_date"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/title"
                                tools:text="@string/date" />

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:ellipsize="marquee"
                                android:textSize="@dimen/text_size_title"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="Sonic the Hedgehog" />


                            <TextView
                                android:id="@+id/overview_header"
                                style="@android:style/Widget.DeviceDefault.Light.TextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_margin"
                                android:text="@string/overview_header"
                                android:textSize="@dimen/text_size_section_header"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/divider3" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/playCL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_margin"
                                android:foreground="?android:attr/selectableItemBackground"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/releaseDate">

                                <ImageView
                                    android:id="@+id/playIcon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/icons_height"
                                    android:contentDescription="@string/play_trailer_icon"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/round_play_arrow_24" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/margin_start"
                                    android:text="@string/play_trailer"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/playIcon"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/favouritesCL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_start_favourites"
                                android:foreground="?android:attr/selectableItemBackground"
                                app:layout_constraintBottom_toBottomOf="@+id/playCL"
                                app:layout_constraintStart_toEndOf="@+id/playCL"
                                app:layout_constraintTop_toTopOf="@+id/playCL"
                                tools:ignore="UnusedAttribute"
                                tools:targetApi="m">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/margin_start"
                                    android:text="@string/add_to_nfavourites"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/favouriteIcon"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/favouriteIcon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/icons_height"
                                    android:contentDescription="@string/add_to_favourites_icon"
                                    android:tag="@string/not_liked"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/round_favorite_border_24" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_start_score"
                                app:layout_constraintBottom_toBottomOf="@+id/favouritesCL"
                                app:layout_constraintStart_toEndOf="@+id/favouritesCL"
                                app:layout_constraintTop_toTopOf="@+id/favouritesCL">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/margin_start"
                                    android:text="@string/user_nscore"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/voteAverage"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/voteAverage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:shadowColor="#00E6DCDC"
                                    android:textColor="@color/text_color_score"
                                    android:textSize="@dimen/text_size_score"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="7.8" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <View
                                android:layout_width="wrap_content"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider"
                                app:layout_constraintBottom_toTopOf="@+id/playCL"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

                            <View
                                android:id="@+id/divider3"
                                android:layout_width="wrap_content"
                                android:layout_height="1dp"
                                android:layout_marginTop="@dimen/margin_divider"
                                android:background="?android:attr/listDivider"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/playCL" />

                            <TextView
                                android:id="@+id/plotSynopsis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_margin"
                                android:justificationMode="inter_word"
                                android:textSize="@dimen/default_text_size"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/releaseDate"
                                app:layout_constraintTop_toBottomOf="@+id/overview_header"
                                tools:text="@string/plot_synopsis_placeholder" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/reviews_header"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_reviews_header"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/plotSynopsis">

                                <TextView
                                    android:id="@+id/show_reviews"
                                    style="@android:style/Widget.DeviceDefault.Light.TextView"

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reviews"
                                    android:textSize="@dimen/margin_reviews_header"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/expand_arrow"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/expand_icon"
                                    android:src="@drawable/reviews_collapsed"
                                    android:tag="@string/reviews_collapsed"
                                    app:layout_constraintBottom_toBottomOf="@+id/show_reviews"
                                    app:layout_constraintStart_toEndOf="@+id/show_reviews"
                                    app:layout_constraintTop_toTopOf="@+id/show_reviews" />

                                <ProgressBar
                                    android:id="@+id/progressBar1"
                                    style="?android:attr/progressBarStyleLarge"
                                    android:layout_width="50dp"
                                    android:layout_height="0dp"
                                    android:layout_centerHorizontal="false"
                                    android:visibility="gone"
                                    app:layout_constraintBottom_toBottomOf="@+id/expand_arrow"
                                    app:layout_constraintStart_toEndOf="@+id/expand_arrow"
                                    app:layout_constraintTop_toTopOf="@+id/expand_arrow" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/empty_rv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_reviews"
                                android:textSize="@dimen/default_text_size"
                                android:textStyle="italic"
                                android:visibility="gone"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/reviews_header" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/reviews_rv"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/reviews_height"
                                android:layout_marginTop="@dimen/default_margin"
                                android:visibility="gone"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/reviews_header" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </FrameLayout>

            </ScrollView>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>